--- a/backend/package.json
+++ b/backend/package.json
@@ -16,8 +16,10 @@
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
     "mssql": "^11.0.1",
+    "multer": "^1.4.5-lts.1",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "nodemon": "^3.1.14"
